# libalgo

./: .gitattributes  .gitignore  Makefile  Makefile.in  README  aes-ni.c  aes-ni.h  anubis.c  anubis.h  arcfour.c  arcfour.h  argon2.c  argon2.h  autogen.sh  blake2b.c  blake2b.h  blowfish.c  blowfish.h  chacha20.c  chacha20.h  config.h  configure.ac  hmac-blake2b.c  hmac-blake2b.h  hmac-sha1.c  hmac-sha1.h  hmac-sha256.c  hmac-sha256.h  hmac-sha512.c  hmac-sha512.h  hmac-whirlpool.c  hmac-whirlpool.h  hmac.h  libalgo.pc.in  rijndael-alg-fst.c  rijndael-alg-fst.h  salsa20.c  salsa20.h  serpent.c  serpent.h  (+11 more)
tests/: aes-ni.c  aes-ni.h  aes-test-vectors.h  anubis.c  anubis.h  arcfour.c  arcfour.h  argon2.c  argon2.h  blake2b.c  blake2b.h  blowfish.c  blowfish.h  chacha20.c  chacha20.h  hmac-blake2b.c  hmac-blake2b.h  hmac-sha1.c  hmac-sha1.h  hmac-sha256.c  hmac-sha256.h  hmac-sha512.c  hmac-sha512.h  hmac-whirlpool.c  hmac-whirlpool.h  main.c  rijndael-alg-fst.c  rijndael-alg-fst.h  rijndael.c  rijndael.h  salsa20.c  salsa20.h  serpent.c  serpent.h  sha1.c  sha1.h  sha256.c  sha256.h  sha512.c  sha512.h  (+7 more)
